# pump-and-dump-prediction

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  LICENSE  README.md  justfile  pyproject.toml  runFeatureWriter.sh
backtest/pipelines/: BaseModel.py  BasePipeline.py  __init__.py  study.py
backtest/pipelines/CatboostClassifier/: model.py  pipe.py
backtest/portfolio/: BasePortfolio.py  PriceImpact.py  TOPKPortfolio.py  __init__.py  config.py  execution_engine.py  impact_provider.py  interfaces.py  kline_loader.py  manipulated_impact_provider.py  models.py  pnl.py  selector.py  sizing.py  vwap_estimator.py
backtest/robust/: __init__.py  robustness.py  significance.py
backtest/utils/: IndicativePriceProvider.py  __init__.py  build_dataset.py  evaluation.py  experiment.py  feature_set.py  graphs.py  impact_example.py  metrics.py  preprocessing.py  sample.py
core/: columns.py  currency_pair.py  exchange.py  feature_type.py  paths.py  time_utils.py
features/: FeatureWriter.py  feature_exprs.py  utils.py
knowledge-base/: .gitignore
knowledge-base/.obsidian/: appearance.json  graph.json
knowledge-base/wiki/: index.md  overview.md
market_data/parsers/: settings.py
notebooks/: research_notebook.ipynb  visualisations.ipynb
paper/: access.tex
preprocessing/: run.py
preprocessing/pipelines/: binance_spot_trades_to_hive.py
resources/: dropped_pumps.json  pumps.json
src/analysis/: research_notebook.ipynb  visualisations.ipynb
src/core/: currency_pair.py  feature_type.py  paths.py  pump_event.py  time_utils.py  utils.py
src/feature_writer/: FeatureWriter.py  feature_exprs.py  pump_feature_writer.py  utils.py
src/preprocessing/: run.py
test/core/: pump_event.py  test_binance_kline_vwap.py  test_time_utils.py
test/feature_writer/: test_feature_writer.py
test/preprocessing/: test_binance_spot_trades_to_hive.py
(+126 files in other folders)
