[tool.poetry]
name = "cryptocurrency-pumps-and-dumps"
version = "0.1.0"
description = ""
authors = ["Mikhail Mironov <mihail.borokoko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.32.2"
pandas = "^2.3.1"
numpy = "^2.3.2"
tqdm = "^4.67.1"
requests = "^2.32.4"
scrapy = "^2.13.3"
pyarrow = "^21.0.0"
notebook = "^7.4.5"
matplotlib = "^3.10.5"
scikit-learn = "^1.7.1"
seaborn = "^0.13.2"
catboost = "^1.2.8"
optuna = "^4.5.0"
ipywidgets = "^8.1.7"
pytest = "^8.4.2"
imbalanced-learn = "^0.14.0"
numba = "^0.62.1"
mplfinance = "^0.12.10b0"
pandas-stubs = "~=2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
