[project]
name = "pumps-and-dumps"
version = "0.1.0"
description = ""
authors = [
    {name = "borokoko",email = "mihail.borokoko@gmail.com"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "numpy (>=2.4.3,<3.0.0)",
    "optuna (>=4.7.0,<5.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "polars (>=1.38.1,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "catboost (>=1.2.10,<2.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pyarrow (>=23.0.1,<24.0.0)",
    "jupyterlab (>=4.5.5,<5.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "overrides (>=7.7.0,<8.0.0)",
    "ipywidgets (>=8.1.8,<9.0.0)",
    "imblearn (>=0.0,<0.1)",
    "scrapy (>=2.14.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.3.0,<27.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pylint (>=4.0.5,<5.0.0)",
    "mypy (>=1.19.1,<2.0.0)"
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.black]
line-length = 120
